--- a/templates/complete.html
+++ b/templates/complete.html
@@ -5,7 +5,9 @@
     <title>Успешно</title>
 </head>
 <body>
-<h3>Вы успешно подписались на обновление цен, вам на почту выслано письмио с текущей ценой на товар.</h3>
-
+<form action="" method="POST">
+    <h3>Вы успешно подписались на обновление цен.</h3>
+    <input type="submit" value="Вернуться в начало" name="submit" />
+</form>
 </body>
 </html>
